--- a/gb/25/1/23/n14420961.md
+++ b/gb/25/1/23/n14420961.md
@@ -3,59 +3,61 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王赫：川普新政与中美欧经济三角</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14421003-GettyImages-2194851218-600x400-1.jpg" />
-<h6>2025年1月23日，美国总统川普（特朗普）通过视频在达沃斯世界经济论坛（WEF）年会上演讲和回答问题。(Fabrice Coffrini/AFP via Getty Images)
-</h6>
+<h6>2025年1月23日，美国总统川普（特朗普）通过视频在达沃斯世界经济论坛（WEF）年会上演讲和回答问题。(Fabrice Coffrini/AFP via Getty Images)</h6>
 <hr>
 	<p>【大纪元2025年01月24日讯】1月21日，川普表示，将对欧洲联盟征收关税；他还说，因“中国（中共）将芬太尼出口到墨西哥和加拿大”（再流入美国），对中国进口产品的10%关税最快有可能在2月1日征收。</p>
 <p>同日，欧委会主席冯德莱恩在达沃斯世界经济论坛2025年年会上强调，“我们已经进入了一个严酷的地缘战略竞争的新时代”，欧盟将尽早与美国新政府采取务实接触；同时重申欧盟推动贸易伙伴多元化，包括欧盟与北京接触，甚至扩大与中国的贸易投资等。</p>
 <p>显然，川普新政正在推动中美欧这三个世界上的最大经济体相互关系的深度调整。本文以货物贸易为例。</p>
-<p><strong>美中之间。</strong>《华尔街日报》曾刊文称，美国和中共之间日益加深的对抗正在侵蚀这两个世界最大经济体之间的贸易关系，来自中国的商品在美国进口商品中所占比例已降至20年来最低水平（见下图）。另一方面，中国虽稳居全球货物贸易第一的位置，但在2018至2023年的五年间，美国在中国全球贸易中的比重下降了2.5个百分点。</p>
-<p style="text-align: center;"><ahref="https://i.epochtimes.com/assets/uploads/2025/01/id14420994-2025-01-23_164847.jpg"><img decoding="async" class="alignnone wp-image-14420994" src="https://i.epochtimes.com/assets/uploads/2025/01/id14420994-2025-01-23_164847.jpg" alt="" width="600" b="290" /></a></p>
-<p>中美货物贸易关系之所以发生转折，恰是川普首届政府于2018年开打的关税战。川普再次执政，继续将关税作为战略武器（川普竞选期间多次表示计划对中国商品加征60%的关税），美中双边关系面临着更大冲击。</p>
+<p><strong>美中之间。</strong>《华尔街日报》曾刊文称，美国和中共之间日益加深的对抗正在侵蚀这两个世界最大经济体之间的贸易关系，来自中国的商品在美国进口商品中所占比例已降至20年来最低水平（见下图）。另一方面，中国虽稳居全球货物贸易第一的位置，但在2018至2023年的五年间，美国在中国全球贸易中的比重下降了2.5个百分点。
+</p>
+<p style="text-align: center"><ahref="https://i.epochtimes.com/assets/uploads/2025/01/id14420994-2025-01-23_164847.jpg" rel="nofollow"><img decoding="async" class="alignnone wp-image-14420994" src="https://i.epochtimes.com/assets/uploads/2025/01/id14420994-2025-01-23_164847.jpg" alt="" width="600" b="290"></a></p>
+<p>
+中美货物贸易关系之所以发生转折，恰是川普首届政府于2018年开打的关税战。川普再次执政，继续将关税作为战略武器（川普竞选期间多次表示计划对中国商品加征60%的关税），美中双边关系面临着更大冲击。</p>
 <p><strong>美欧之间。</strong>川普首届政府期间，美欧关系紧张。拜登四年执政，欧美关系转圜。在经贸领域，美欧就波音和空客航空补贴争端以及钢铝贸易战达成“休战”协议，还组建了跨大西洋贸易和技术理事会（TTC），在应对中共方面开始了机制化的协调和合作。尤其2022年2月以来的俄乌战争，进一步拉近了大西洋两岸间的关系。不过，美国和欧盟的贸易政策在许多方面虽大体一致，但贸易摩擦仍然存在（例如欧盟对拜登政府《降低通胀法案》的九项保留意见）。更大的问题是，美欧经济关系的方向模糊——TTIP自2013年启动以来，谈判经历十多轮，美欧始终未能达成自贸协定。川普第一任期，TTIP逐渐被“冷藏”。川普再次执政，普遍认为美欧经贸关系将再趋紧张，因为美欧多领域产业竞争成“常态”、实力不对称以及政策协调困难等等。</p>
-<p>现在，川普首先敲打的，就是美国在美欧货物贸易中的巨额逆差。事实上，从2013年到2023年，欧盟对美国的货物贸易顺差在2013年的810亿欧元和2021年的1660亿欧元之间变化（见下图）。以2023年为例，欧盟向美国出口了价值5020亿欧元的商品，同时进口了价值3440亿欧元的商品，为欧盟创造了1580亿欧元的顺差。仅这一项，就使美欧关系坎坷不平。</p>
-<p style="text-align: center;"><ahref="https://i.epochtimes.com/assets/uploads/2025/01/id14420995-2025-01-23_165058.jpg"><img decoding="async" class="alignnone wp-image-14420995" src="https://i.epochtimes.com/assets/uploads/2025/01/id14420995-2025-01-23_165058.jpg" alt="" width="600" b="321" /></a></p>
-<p><strong>中欧之间</strong>。川普第一任期（2017—2020），美欧关系紧张，中共乘机拉拢欧盟，不顾即将上台的拜登政府的反对，达成《中欧全面投资协定》。但是，中共误判形势以为“东升西降”，大搞战狼外交，导致欧盟议会搁置《中欧投资协定》。另一方面，中美“极端化的战略竞争”和拜登政府调整对欧政策，以及俄乌战争和中共对俄罗斯的支持，使欧盟推行“去风险化”政策。</p>
-<p>中欧贸易长期失衡，中国享有巨额顺差。2018—2024年（见下图），中欧货物贸易总额增加了1000多亿美元，但增加额来自中国对欧出口，欧盟对华出口基本上原地踏步。欧盟对此不满，中欧贸易摩擦加剧，尤其2024年将中国电动汽车的关税税率从10%大幅提升到最高45.3%。</p>
-<p style="text-align: center;"><strong>2018—2024中国对欧货物贸易基本数据</strong></p>
-<figure id="attachment_14421016" aria-describedby="caption-attachment-14421016" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14421016-2025-01-23_165206.jpg"><img decoding="async" class=" wp-image-14421016" src="https://i.epochtimes.com/assets/uploads/2025/01/id14421016-2025-01-23_165206.jpg" alt="" width="600" b="104" /></a><figcaption id="caption-attachment-14421016" class="wp-caption-text">数据来源：中共海关总署</figcaption></figure>
+<p>现在，川普首先敲打的，就是美国在美欧货物贸易中的巨额逆差。事实上，从2013年到2023年，欧盟对美国的货物贸易顺差在2013年的810亿欧元和2021年的1660亿欧元之间变化（见下图）。以2023年为例，欧盟向美国出口了价值5020亿欧元的商品，同时进口了价值3440亿欧元的商品，为欧盟创造了1580亿欧元的顺差。仅这一项，就使美欧关系坎坷不平。
+<p style="text-align: center"><ahref="https://i.epochtimes.com/assets/uploads/2025/01/id14420995-2025-01-23_165058.jpg" rel="nofollow"><img decoding="async" class="alignnone wp-image-14420995" src="https://i.epochtimes.com/assets/uploads/2025/01/id14420995-2025-01-23_165058.jpg" alt="" width="600" b="321"></a></p>
+<p><strong>中欧之间</strong></p>
+<p>。川普第一任期（2017—2020），美欧关系紧张，中共乘机拉拢欧盟，不顾即将上台的拜登政府的反对，达成《中欧全面投资协定》。但是，中共误判形势以为“东升西降”，大搞战狼外交，导致欧盟议会搁置《中欧投资协定》。另一方面，中美“极端化的战略竞争”和拜登政府调整对欧政策，以及俄乌战争和中共对俄罗斯的支持，使欧盟推行“去风险化”政策。</p>
+<p>中欧贸易长期失衡，中国享有巨额顺差。2018—2024年（见下图），中欧货物贸易总额增加了1000多亿美元，但增加额来自中国对欧出口，欧盟对华出口基本上原地踏步。欧盟对此不满，中欧贸易摩擦加剧，尤其2024年将中国电动汽车的关税税率从10%大幅提升到最高45.3%。
+<p style="text-align: center"><strong>2018—2024中国对欧货物贸易基本数据</strong></p>
+<figure id="attachment_14421016" aria-describedby="caption-attachment-14421016" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14421016-2025-01-23_165206.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14421016" src="https://i.epochtimes.com/assets/uploads/2025/01/id14421016-2025-01-23_165206.jpg" alt="" width="600" b="104"></a><figcaption id="caption-attachment-14421016" class="wp-caption-text">数据来源：中共海关总署</figcaption></figure>
 <p>但是，川普第二任期开始，又敲打欧盟，欧盟又想借力中国，增加自己应对美国的筹码。冯德莱恩在达沃斯世界经济论坛2025年年会上，14次提及中国，外界解读“冯德莱恩想告诉美国：我们还有其它选择”。</p>
-<p>综上所述，美欧中经济关系错综复杂，当前尚处于僵持状态，存在不小变数。未来如何演变，川普的战略和政策是主导因素。</p>
+<p>综上所述，美欧中经济关系错综复杂，当前尚处于僵持状态，存在不小变数。未来如何演变，川普的战略和政策是主导因素。
 <h2>结语</h2>
-<p>美国、欧盟、中国是全球最大的三个经济体、贸易中心和制造业中心。以2023年为例。（一）GDP。美国27.37万亿美元，欧盟18.34万亿美元，中国17.89万亿美元，三者合计占全球GDP（105.44万亿美元）的60%。（二）货物进出口总值。美国、欧盟、中国分别为5.19万亿美元、14.25万亿美元、5.94万亿美元，三者分别占全球货物进出口总值的比重11.0%、30.2%、12.6%，三者合计占全球货物进出口总值的比重为53.8%。（三）货物出口。美国、欧盟、中国分别为2.02万亿美元、7.20万亿美元、3.38万亿美元，三者分别占全球货物出口总值的比重为8.7%、30.9%、14.5%，三者合计占全球货物出口总值的比重为54.6%。可以说，美国、欧盟、中国三者的经济关系，大体主导了世界经济格局。</p>
+美国、欧盟、中国是全球最大的三个经济体、贸易中心和制造业中心。以2023年为例。（一）GDP。美国27.37万亿美元，欧盟18.34万亿美元，中国17.89万亿美元，三者合计占全球GDP（105.44万亿美元）的60%。（二）货物进出口总值。美国、欧盟、中国分别为5.19万亿美元、14.25万亿美元、5.94万亿美元，三者分别占全球货物进出口总值的比重11.0%、30.2%、12.6%，三者合计占全球货物进出口总值的比重为53.8%。（三）货物出口。美国、欧盟、中国分别为2.02万亿美元、7.20万亿美元、3.38万亿美元，三者分别占全球货物出口总值的比重为8.7%、30.9%、14.5%，三者合计占全球货物出口总值的比重为54.6%。可以说，美国、欧盟、中国三者的经济关系，大体主导了世界经济格局。</p>
 <p>但是，美国、欧盟、中国的货物贸易是失衡的。第一，中国对美国、欧盟享有巨额顺差。根据中共海关数据，2024年中国对美顺差3,610亿美元，对欧盟顺差2,471亿美元，两者合计占中国顺差总额的60%。第二，欧盟对美国享有巨额顺差。而货物贸易失衡的背后，是中国制造业的超大规模、产能过剩和低价倾销。制造业成为了中共手中的一张王牌。</p>
 <p>在世界战略格局向美中两极对抗加速演进的大背景下，川普要重振美国，必然要推进美国“再工业化”，对国际经济关系格局进行重整，其中核心是要调整对欧盟和中国的经济关系，关税是有利手段，但不是唯一手段，不可能仅靠关税就能达成目标。</p>
 <p>对川普的最大挑战，是如何在使美国再度伟大的同时，协调已与美国密切结合的欧盟经济，共同应对中共的“系统性挑战”，而不是让中共在美欧之间打进楔子。</p>
 <p>大纪元首发</p>
 <p>责任编辑：高义#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/18/n14228145.md#1">王赫：中国与美欧日韩贸易关系大变动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/14/n14250261.md#1">美驻欧盟大使：中共正蓄意破坏美欧经济产业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420894.md#1">川普视频参加达沃斯：美中贸易关系需公平</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420913.md#1">川普达沃斯演讲吁企业来美生产 否则面临关税</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/15/n10058256.md#1" target="_blank">林辉：老百姓恨日本人也恨八路军的背后</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/26/n2443847.md#1" target="_blank">《中共弄巧成拙》(1):天安门自焚伪案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/23/n11403580.md#1" target="_blank">共产暴政录：盛世才与国共两党的新疆分裂争夺战</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/1/10/n2392041.md#1" target="_blank">法轮功简介</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/23/n11403562.md#1">炎炎大暑也能补 中医民俗智慧 简易可得十补方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/19/n7572375.md#1">两次东山再起的“中华商圣”范蠡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14553023.md#1">【未解之谜】比富士山还危险？2025年预言中的火山是它？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385712.md#1">【古道人生】盗贼刘雄飞知恩厚报</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550214.md#1">《论语》说（80）：如何孝顺父母？孔子四则金句</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/21/n14557468.md#1">【重播】白宫新闻秘书莱维特与媒体对话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/21/n14557344.md#1">【纪元焦点】洗澡全身屎味 杭州臭水门谁是源头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/20/n14555810.md#1">【未解之谜】真实的因果轮回 明朝书生前世害命今生还</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555609.md#1">寝具没洗比马桶脏？专家揭示多久清洁一次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555653.md#1">广东爆新疫情逾千人感染 民间不满延迟通报</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/20/n14555853.md#1">中国中产失业者陷职场“隐形消失”危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/18/n14554989.md#1">伊能静夫妇在巴黎手牵手逛街 秦昊复胖引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/18/n14554938.md#1">肖战微博改名登顶热搜 简介中的代表作引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555710.md#1">杨幂摆脱一连三部作品翻车阴影 新片演技获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555093.md#1">董璇再婚登热搜 佟丽娅当伴娘引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555659.md#1">梁朝伟与刘嘉玲甜蜜放闪 夫妻俩穿情侣装陪跑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/20/n14555912.md#1">把牛奶存放在冰箱的这个位置 很容易变质</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/21/n14556843.md#1">10种日常用品是细菌温床 专家教你自我防护</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/13/n14550375.md#1">素食易缺乏七种营养素 营养师授补救之道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552342.md#1">专家揭示糖类代谢真相与健康风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555278.md#1">【梁厨美食】南瓜虾滑日式猪骨汤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/23/n14420961.htm">王赫：川普新政与中美欧经济三角</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420961.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
